--- a/style.css
+++ b/style.css
@@ -7,6 +7,14 @@ body {
   padding: 0;
   background: #f7fff6;
 }
+.nav-brand{
+  background-image: url(./favicon.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 8vmin;
+  height: 100%;
+}
 
 nav {
   position: fixed;
@@ -73,12 +81,14 @@ nav ul li a:hover {
   border-radius: 30px;
 }
 .hero-image {
-  height: 100vh;
-  width: 100%;
+  height: 80vh;
+  width: 90%;
   border-radius: 30px;
+  padding-left: 80px;
+
 }
 #home {
-  margin-top: 30px;
+  padding-top: 80px;
 }
 
 section {
